# oxid_blog

./: .gitignore  Cargo.toml
assets/: content.css  main.css
scripts/: blog_schema_migrate_up.sql  blog_schema_sqlite.sql
src/: config.rs  database.rs  errors.rs  main.rs
static/: index.html
templates/: base.html  login.html  post.html  users.html
