[package]
name = "oxid_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
rand = "0.8.5"
serde = { version =  "1.0.187", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }