[package]
name = "oxid_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
askama = "0.12.0"
tower-http = { version = "0.4.3", features = ["full"]}
mongodb = "2.6.1"